--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         #invoice {
             flex-basis: 100%;
-            max-width: 640px;
+            max-width: 320px;
             margin: 30px auto;
             background-color: #fff;
             border-radius: 8px;
@@ -82,7 +82,7 @@
             font-size: 14px;
         }
         table {
-            width: 100%;
+            width: 300px;
             border-collapse: collapse;
             margin-bottom: 15px;
         }
@@ -166,9 +166,10 @@
         }
         @media (max-width: 640px) {
             #invoice {
-                width: 640px;
+                width: 600px;
                 padding: 20px;
             }
+
             .invoice-header, .invoice-details {
                 flex-direction: column;
             }
@@ -222,7 +223,8 @@
                 <h2>Adinyinaa Aluminium Service</h2>
                 <p>Asofa New Station</p>
                 <p>Accra, Ghana</p>
-                <p>Phone: (+233) 0555 070 899 | Email: adinyinaaluminum@gmail.com</p>
+                <p>Phone: (+233) 0555 070 899</p>
+                <p>| Email: adinyinaaluminum@gmail.com</p>
                 <p>WhatsApp: (+233)0555070899</p>
             </div><br><br>
             <div class="invoice-title">
@@ -283,8 +285,9 @@
         <div class="invoice-footer" style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #eaeaea;">
             <p style="text-align: center; color: #7f8c8d; font-size: 13px;">
                 Thank you for your business! Payment can be made via bank transfer or Mobile Money.<br>
-                <strong>Bank Details:</strong> Evans Sekyi| Momo Account #: 0555070899 | Ecobank(Barrier) #: 0987654321<br>
-                <strong>Payments</strong> must not delay.
+                <strong>Bank Details:</strong><br> 
+                <strong>Evans Sekyi  |  Momo Account #: 0555070899<br>  Ecobank(Barrier) #: 0987654321<br>
+                Payments must not delay.
             </p>
         </div>
         
@@ -442,4 +445,3 @@
     </script>
 </body>
   </html>
- 
