--- a/index.html
+++ b/index.html
@@ -222,9 +222,10 @@
             <div class="company-info">
                 <h2>Adinyinaa Aluminium Service</h2>
                 <p>Asofa New Station</p>
+                <p>(between Blockfactory & Transformer)</p>
                 <p>Accra, Ghana</p>
                 <p>Phone: (+233) 0555 070 899</p>
-                <p>Email: adinyinaaluminum@gmail.com</p>
+                <p>Email: adinyinaaaluminum@gmail.com</p>
                 <p>WhatsApp: (+233)0555070899</p>
             </div><br><br>
             <div class="invoice-title">
@@ -286,7 +287,7 @@
             <p style="text-align: center; color: #7f8c8d; font-size: 13px;">
                 Thank you for choosing Us!<br> Payment can be made via bank transfer or Mobile Money.<br>
                 <strong>Bank Details:</strong><br> 
-                <strong>Evans Sekyi  |  Momo Account #: 0555070899<br>  Ecobank(Barrier) #: 0987654321</strong><br>
+                <strong>Evans Sekyi  |  Momo Account #: 0555070899<br>  Ecobank (Mile 7 branch) #: 1441004325556</strong><br>
                 Payment must not delay.
             </p>
         </div>
